--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -17,34 +17,31 @@ case_number = 20
 [Time_integration]
 
 # Time step
-dt = 360
+dt = 1800
 
 # End time of the simulation in sec
-t_end = 3600
+#t_end = 3600
 # 6 days, per DCMIP spec
-#t_end = 518400 
+t_end = 518400 
 
 # Time integration scheme
-time_integrator = epi2
+time_integrator = epi_stiff3
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-12
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
-nb_elements_horizontal = 30 
+nb_elements_horizontal = 20 
 # 15 vertical levels (DCMIP spec, version 1)
 nb_elements_vertical = 5 
 # 30 vertical levels (DCMIP spec, version 2)
 #nb_elements_vertical = 10 
-
-#filter_apply = 1
-#filter_order  = 2
 
 [Output_options]
 
