--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -11,6 +11,10 @@ grid_type = cubed_sphere
 
 ztop = 10000.0
 
+[System]
+; device = cuda
+cuda_devices = [0, 1, 2]
+
 [Test_case]
 
 case_number = 31
@@ -22,12 +26,13 @@ dt = 30
 
 # End time of the simulation in sec
 #t_end = 0
-t_end = 3600
+t_end = 30
 #t_end = 36000
 #t_end = 450000
 
 # Time integration scheme
 time_integrator = epi2
+jacobian_method = ad
 
 # Solver tolerance
 tolerance = 1e-7
@@ -37,7 +42,7 @@ gmres_restart = 200
 
 [Preconditioning]
 
-preconditioner = fv-mg
+preconditioner = none
 precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
@@ -57,8 +62,8 @@ verbose_precond = 0
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 24
-nb_elements_vertical = 3
+nb_elements_horizontal = 8
+nb_elements_vertical = 4
 
 #filter_apply = 1
 #filter_order  = 2
