--- a/config/test_files/epi4/case6_kiops.ini
+++ b/config/test_files/epi4/case6_kiops.ini
@@ -30,6 +30,7 @@ dt = 900
 
 # End time of the simulation in sec
 t_end = 14400
+#t_end = 14400
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -74,7 +75,7 @@ nb_elements_horizontal = 168
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 1
+stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 output_freq = 0
