--- a/config/test_files/epi4/case6_cwyne.ini
+++ b/config/test_files/epi4/case6_cwyne.ini
@@ -38,7 +38,7 @@ t_end = 14400
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = epi4
 
-exponential_solver = cwy_ne
+exponential_solver = cwy_ne1s
 
 # Solver tolerance
 tolerance = 1e-12
