--- a/config/test_files/srerk3/case5_pmexne.ini
+++ b/config/test_files/srerk3/case5_pmexne.ini
@@ -39,7 +39,7 @@ time_integrator = srerk3
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = pmex
+exponential_solver = pmex_ne1s
 
 [Spatial_discretization]
 
