--- a/config/test_files/srerk3/case6_icwyne.ini
+++ b/config/test_files/srerk3/case6_icwyne.ini
@@ -41,7 +41,7 @@ time_integrator = srerk3
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = icwy_ne
+exponential_solver = icwy_ne1s
 
 gmres_restart = 20
 
