--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -49,7 +49,7 @@ krylov_size = 10
 # Solver tolerance
 tolerance = 1e-12
 
-jacobian_method = FD
+jacobian_method = complex
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
