--- a/config/case2.ini
+++ b/config/case2.ini
@@ -1,60 +1,28 @@
 [General]
-
+sys_iter = 7
 equations = shallow_water
 
 [Grid]
 grid_type = cubed_sphere
 λ0 = 0.0
-#ϕ0 = 0.0
 ϕ0 = 0.7853981633974483
 α0 = 0.0
 
 [Test_case]
-
-# Possible values
-#  -1 : multiscale signal (passive advection only)
-#   0 : deformation flow  (passive advection only)
-#   1 : cosine hill (passive advection only)
-#   2 : zonal flow (shallow water)
-#   5 : zonal flow over an isolated mountain (shallow water)
-#   6 : Rossby-Haurvitz waves (shallow water)
-#   8 : Unstable jet (shallow water)
 case_number = 2
 
 [Time_integration]
-
-# Time step
 dt = 1800
-
-# End time of the simulation in sec
 t_end = 432000
-
-# Time integration scheme
-# Possible values  = tvdrk3 : 3th Order TVD-RK time integration
-#                    epi2 : 2n order exponential propagation iterative
-#                    epi3 : 3rd order exponential propagation iterative (Recommended)
-#                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = ros2
-
-# Solver tolerance
 tolerance = 1e-7
 
 [Spatial_discretization]
-
-# The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
 nbsolpts = 3
-
-# Number of element in x^1 and x^2 directions
-# Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
 nb_elements_horizontal = 10
 
 [Output_options]
-
-# Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 1
-
-# Output solution every "output_freq" steps, 0 to disable.
 output_freq = 1
-
-# Output filename
 base_output_file = out
+
