--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -22,35 +22,42 @@ dt = 1800
 # End time of the simulation in sec
 #t_end = 3600
 # 6 days, per DCMIP spec
-t_end = 518400 
+t_end = 86400
 
 # Time integration scheme
-time_integrator = epi_stiff3
+time_integrator = epi_stiff6
 
 # Solver tolerance
 tolerance = 1e-12
+; exponential_solver = kiops
+
+# If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
+starting_step = 0
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
-nb_elements_horizontal = 20 
+nb_elements_horizontal = 30
 # 15 vertical levels (DCMIP spec, version 1)
-nb_elements_vertical = 5 
+nb_elements_vertical = 20
 # 30 vertical levels (DCMIP spec, version 2)
 #nb_elements_vertical = 10 
 
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 0
+stat_freq = 1
+
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 6 hours
 output_freq = 1
 
 # Output filename
-base_output_file = out
+base_output_file = sixth_order_elem_10_2
