--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -3,7 +3,7 @@ equations = Euler
 depth_approx = shallow
 
 [System]
-device = cuda
+; device = cuda
 
 [Grid]
 grid_type = cubed_sphere
@@ -21,19 +21,19 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 30
+dt = 14.5
 
 # End time of the simulation in sec
 #t_end = 0
-t_end = 30
+t_end = 3600
 #t_end = 36000
 #t_end = 450000
 
 # Time integration scheme
-time_integrator = epi2
+time_integrator = epi5
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-10
 
 verbose_solver = 1
 gmres_restart = 200
@@ -61,8 +61,8 @@ verbose_precond = 0
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 12
-nb_elements_vertical = 3
+nb_elements_horizontal = 10
+nb_elements_vertical = 2
 
 #filter_apply = 1
 #filter_order  = 2
@@ -73,7 +73,7 @@ nb_elements_vertical = 3
 stat_freq = 0
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 0
+output_freq = 100
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 0
