--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -21,23 +21,22 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 14.5
+dt = 0.5
 
 # End time of the simulation in sec
 #t_end = 0
 t_end = 3600
 #t_end = 36000
 #t_end = 450000
-
 # Time integration scheme
-time_integrator = epi5
+time_integrator = epi_stiff6
 
 # Solver tolerance
-tolerance = 1e-10
+tolerance = 1e-14
 
 verbose_solver = 1
 gmres_restart = 200
-exponential_solver = kiops
+; exponential_solver = kiops
 
 [Preconditioning]
 
@@ -61,8 +60,8 @@ verbose_precond = 0
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 10
-nb_elements_vertical = 2
+nb_elements_horizontal = 15
+nb_elements_vertical = 5
 
 #filter_apply = 1
 #filter_order  = 2
@@ -70,10 +69,10 @@ nb_elements_vertical = 2
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 0
+stat_freq = 1
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 100
+output_freq = 10
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 0
@@ -82,4 +81,8 @@ save_state_freq = 0
 store_solver_stats = 0
 
 output_dir = results
+
+# Output filename
+base_output_file = out_31_2
+
 solver_stats_file = solver_stats.db
