--- a/config/eulerVortex.ini
+++ b/config/eulerVortex.ini
@@ -5,9 +5,9 @@ equations = euler
 grid_type = cartesian2d
 
 x0 = 0
-x1 = 0.1
+x1 = 20
 z0 = 0
-z1 = 0.1
+z1 = 20
 
 [Test_case]
 
@@ -19,10 +19,10 @@ case_number = 555
 
 [Time_integration]
 # Time step
-dt = 5.78e-4
+dt = 0.01
 
 # End time of the simulation in sec
-t_end = 0.289
+t_end = 20
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -37,7 +37,7 @@ t_end = 0.289
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi2
+time_integrator = tvdrk3
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -76,8 +76,8 @@ nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 80
-nb_elements_vertical   = 80
+nb_elements_horizontal = 10
+nb_elements_vertical   = 10
 
 # Weak filter
 filter_apply = 0
@@ -90,7 +90,7 @@ filter_cutoff = 0.5
 stat_freq = 1
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 50
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 24
