--- a/config/eulerVortex.ini
+++ b/config/eulerVortex.ini
@@ -19,7 +19,7 @@ case_number = 555
 
 [Time_integration]
 # Time step
-dt = 0.01
+dt = 0.1
 
 # End time of the simulation in sec
 t_end = 20
@@ -37,20 +37,20 @@ t_end = 20
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = tvdrk3
+time_integrator = epi_stiff5
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-18
 
 ; jacobian_method = complex
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
 
-verbose_solver = 1
+verbose_solver = 0
 gmres_restart = 30
 
 [Preconditioning]
@@ -72,16 +72,16 @@ verbose_precond = 0
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 6
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 10
-nb_elements_vertical   = 10
+nb_elements_horizontal = 40
+nb_elements_vertical   = 40
 
 # Weak filter
 filter_apply = 0
-filter_order = 4
+filter_order = 3
 filter_cutoff = 0.5
 
 [Output_options]
@@ -90,12 +90,15 @@ filter_cutoff = 0.5
 stat_freq = 1
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 50
+output_freq = 1
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 24
+save_state_freq = 0
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
-store_solver_stats = 1
+store_solver_stats = 0
 
 output_dir = results
+
+# Output filename
+base_output_file = thirdOrder
